--- a/BJJInParadise.Web/Views/Home/Index.cshtml
+++ b/BJJInParadise.Web/Views/Home/Index.cshtml
@@ -297,8 +297,8 @@
         <div class="row">
             <div id="accordion" class="container">
                 <div class="card">
-                    <div class="card-header">
-                        <a class=" card-link" data-toggle="collapse" href="#collapseTwo">
+                    <div class="card-header  bg-info">
+                        <a class=" card-link text-light" data-toggle="collapse" href="#collapseTwo">
                             Where is the camp?
                         </a>
                     </div>
@@ -310,8 +310,8 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseOne">
                             How do I get to camp?
                         </a>
                     </div>
@@ -324,8 +324,8 @@
 
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseThree">
                             Is it safe?
                         </a>
                     </div>
@@ -337,8 +337,8 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseFour">
                             What day do I need to arrive / leave?
                         </a>
                     </div>
@@ -350,8 +350,8 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseFive">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseFive">
                             I’m a complete beginner, can I still join?
                         </a>
                     </div>
@@ -362,8 +362,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseSix">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseSix">
                             What language will the classes be taught in?
                         </a>
                     </div>
@@ -375,8 +375,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseSeven">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseSeven">
                             Is it possible to do private lessons with the instructors?
                         </a>
                     </div>
@@ -389,8 +389,8 @@
 
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseEight">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseEight">
                             Is this just a BJJ camp?
                         </a>
                     </div>
@@ -404,8 +404,8 @@
 
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseNine">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseNine">
                             Do you have gym facilities?
                         </a>
                     </div>
@@ -419,8 +419,8 @@
 
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTen">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseTen">
                             When will there be training?
                         </a>
                     </div>
@@ -433,8 +433,8 @@
 
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseEleven">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseEleven">
                             Will I be allowed to film during the camp?
                         </a>
                     </div>
@@ -446,33 +446,97 @@
                 </div>
 
                 <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwelve">
-                            Other Questions
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapseTwelve">
+                            Is there a supermarket/ other amenities near the hotel?
                         </a>
                     </div>
                     <div id="collapseTwelve" class="collapse" data-parent="#accordion">
                         <div class="card-body">
-                            Is there a supermarket/ other amenities near the hotel?
+                           
                             Yes, just a short walk away are tons of stores, bars, restaurants and pharmacies should you need anything. Taxi's are also very cheap and safe to further explore.
 
-                            Do you have WiFi connection?
-                            Yes, there is a high speed WiFi connection the hotel.
-                            Where can I wash my training clothes?
-                            We will offer free daily laundry service.
-                            What kind of food are you serving?
-                            We will offer high quality, fresh food throughout the camp. Fresh fruits, eggs, juices and hearty lunches are among the offerings from the great restaurant and chefs at Hotel Santa Fe and several other dining options around Puerto.
-                            Is there an option for vegetarian food?
-                            Yes.
-                            How is the night life?
-                            Amazing. Puerto is a great mix of family-friendly, safe and quiet and fun and vibrant night-life. There is something for everyone!
-                            Is it safe?
-                            Once again...Yes :)
                         </div>
                     </div>
                 </div>
-
-
+                <div class="card">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse12">
+                            Do you have WiFi connection?
+                        </a>
+                    </div>
+                    <div id="collapse12" class="collapse" data-parent="#accordion">
+                        <div class="card-body">
+                            Yes, there is a high speed WiFi connection the hotel.
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header  bg-info">
+                        <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse13">
+                            Where can I wash my training clothes?
+                        </a>
+                    </div>
+                    <div id="collapse13" class="collapse" data-parent="#accordion">
+                        <div class="card-body">
+                            We will offer free daily laundry service.
+                        </div>
+                    </div>
+                </div>
+                
+                
+                
+                
+            <div class="card">
+                <div class="card-header  bg-info">
+                    <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse14">
+                        What kind of food are you serving?
+                    </a>
+                </div>
+                <div id="collapse14" class="collapse" data-parent="#accordion">
+                    <div class="card-body">
+                    
+                        We will offer high quality, fresh food throughout the camp. Fresh fruits, eggs, juices and hearty lunches are among the offerings from the great restaurant and chefs at Hotel Santa Fe and several other dining options around Puerto.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header  bg-info">
+                    <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse15">
+                        Is there an option for vegetarian food? </a>
+                </div>
+                <div id="collapse15" class="collapse" data-parent="#accordion">
+                    <div class="card-body">
+                        Yes.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header  bg-info">
+                    <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse16">
+                        How is the night life?
+                     </a>
+                </div>
+                <div id="collapse16" class="collapse" data-parent="#accordion">
+                    <div class="card-body">
+                        Amazing. Puerto is a great mix of family-friendly, safe and quiet and fun and vibrant night-life. There is something for everyone!
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header  bg-info">
+                    <a class="collapsed card-link text-light" data-toggle="collapse" href="#collapse17">
+                     
+                        Is it safe?
+                        
+                    </a>
+                </div>
+                <div id="collapse17" class="collapse" data-parent="#accordion">
+                    <div class="card-body">
+                        Once again...Yes :)
+                    </div>
+                </div>
+            </div>
             </div>
 
         </div>
@@ -655,5 +719,22 @@
                 a(".navbar").removeClass("d-none")
             })
         }(jQuery);
+
+        $("#sendMessageButton").click(function () {
+            var data = { name: $("#name").val(), email: $("#email").val(), phone: $("#phone").val(), message: $("#message").val()  }
+            $.post('@Url.Action("SendMessage")',
+                    data,
+                    function(backdata, status) {
+
+                    },
+                    "json").done(function(data) {
+
+                   
+
+                })
+                .fail(function(xhr) {
+                    alert(xhr.data.message);
+                });;
+        })
     </script>
 }
