--- a/BJJInParadise.Web/Views/Booking/Index.cshtml
+++ b/BJJInParadise.Web/Views/Booking/Index.cshtml
@@ -241,10 +241,18 @@
     <script src="~/Scripts/jquery.smartWizard.js"></script>
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-
-
-
-
+        $(document).on('invalid-form.validate', 'form', function () {
+            var button = $(this).find('input[type="submit"]');
+            setTimeout(function () {
+                button.removeAttr('disabled');
+            }, 1);
+        });
+        $(document).on('submit', 'form', function () {
+            var button = $(this).find('input[type="submit"]');
+            setTimeout(function () {
+                button.attr('disabled', 'disabled');
+            }, 0);
+        });
         $(document).ready(function() {
             $('#smartwizard').smartWizard();
             var counter = 0;
