--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                         </li>
                         
-                        <li class="nav-item dropdown">
+                        @*<li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Upcoming Camps
                             </a>
@@ -88,8 +88,8 @@
                                     @Html.ActionLink("Casa Camp 2018", "Latest", "Camp", null, new {@class = "dropdown-item"})
 
                             </div>
-                        </li>
-                        @*@if ( camps.Any())
+                        </li>*@
+                       @if ( camps.Any())
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -108,7 +108,7 @@
                             <li class="nav-item">
                                 @Html.ActionLink("Reserve My Spot", "Index", "Booking", null, new {@class = "nav-link"})
                             </li>
-                        }*@
+                        }
                        
                     </ul>
                     @Html.Partial("_LoginPartial")
